async-stream/tests/ui/yield_in_closure.stderr
error[E0658]: yield syntax is experimental
 --> $DIR/yield_in_closure.rs:9:17
  |
9 |                 yield v;
  |                 ^^^^^^^
  |
  = note: for more information, see https://github.com/rust-lang/rust/issues/43122
  = help: add `#![feature(generators)]` to the crate attributes to enable

error[E0628]: generators cannot have explicit arguments
 --> $DIR/yield_in_closure.rs:8:23
  |
8 |             .and_then(|v| {
  |                       ^^^

For more information about this error, try `rustc --explain E0658`.
